--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "vitest": "^3.0.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.731.1",
+    "@aws-sdk/lib-storage": "^3.731.1",
     "@fastify/cors": "^10.0.2",
     "@fastify/multipart": "^9.0.2",
     "@fastify/swagger": "^9.4.2",
