--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test:watch": "dotenv -e .env.test -- vitest",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:migrate:test": "dotenv -e .env.test -- drizzle-kit migrate",
+    "pretest": "yarn run db:migrate:test",
+    "pretest:watch": "yarn run db:migrate:test"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
