--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.731.1",
     "@aws-sdk/lib-storage": "^3.731.1",
+    "@faker-js/faker": "^9.4.0",
     "@fastify/cors": "^10.0.2",
     "@fastify/multipart": "^9.0.2",
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.1",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "^0.38.4",
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
