--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,8 +29,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
-        name: Install pnpm
+      - uses: yarn/action-setup@v4
+        name: Install yarn
         with:
           version: 9
           run_install: false
@@ -39,7 +39,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: 'yarn'
 
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm run test
+      - run: yarn install --frozen-lockfile
+      - run: yarn run test
