--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "db:studio": "drizzle-kit studio",
     "db:migrate:test": "dotenv -e .env.test -- drizzle-kit migrate",
     "pretest": "yarn run db:migrate:test",
-    "pretest:watch": "yarn run db:migrate:test"
+    "pretest:watch": "yarn run db:migrate:test",
+    "build": "tsup-node"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/node": "^22.10.7",
     "dotenv-cli": "^8.0.0",
     "drizzle-kit": "^0.30.2",
+    "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "vite-tsconfig-paths": "^5.1.4",
